# fhiry

./: .buildinfo  .coveragerc  .gitignore  .readthedocs.yml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  README.md  authors.html  changelog.html  codecov.yaml  contributing.html  dev-requirements.in  dev-requirements.txt  fhir-search.md  fhiry.html  genindex.html  index.html  license.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  t_install.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  license.doctree  readme.doctree
.doctrees/api/: fhiry.doctree  modules.doctree
.github/workflows/: docs.yml  github-dependents-info.yml  pr.yml  publish.yml  pytest.yml  tox.yml  upgrade.yml
_modules/: index.html
_modules/fhiry/: base_fhiry.html  bqsearch.html  fhirndjson.html  fhirsearch.html  fhiry.html  flattenfhir.html  parallel.html
_sources/: changelog.md.txt  index.md.txt  readme.md.txt
_sources/api/: fhiry.rst.txt
api/: fhiry.html  modules.html
changelog/: index.html
contributing/: index.html
docs/: conf.py  github-dependents-info.md  index.html  index.md  index.rst  modules.md  requirements.txt
examples/: cli.md  llm_example.py
fhiry/: __init__.py  fhirndjson.py  fhiry.py  ndjson.py  parallel.py
fhiry/resources/fhir/: cfhir.json
github-dependents-info/: index.html
modules/: index.html
notebooks/: example-1.ipynb  gcp.ipynb  ndjson.ipynb
notes/: columns.md  dataframe.md  diagram-1.md  docs.md  ndjson-columns.md  pip-tools.md  pyproject.toml  work1.py
search/: search_index.json
src/fhiry/: __init__.py  base_fhiry.py  bqsearch.py  fhirndjson.py  fhirsearch.py  fhiry.py  flattenfhir.py  main.py  parallel.py  skeleton.py
tests/: conftest.py  test_bqsearch.py  test_cli.py  test_fhirndjson.py  test_fhirsearch.py  test_fhiry.py  test_flattenfhir.py  test_skeleton.py
tests/resources/: 1.Observation.ndjson  1.Patient.ndjson  AllergyIntolerance.ndjson  Device.ndjson  Encounter.ndjson  Procedure.ndjson
tests/resources/fhirsearch/: conditions.json  search-conditions-page1.json  search-conditions-page2.json  search-conditions-page3.json
tests/resources/flattenfhir/: allergy_intolerance.json  bundle.json  condition.json  document_reference.json  medication.json  observation.json  patient.json  procedure.json
