[tool.poetry]
name = "fhiry"
version = "0.1.0"
description = ""
authors = ["Bell Eapen <github@gulfdoctor.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
"fhir.resources" = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
