[build-system]
requires = ["setuptools>=61.2", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "fhiry"
description = "FHIR to pandas.dataframe for AI and ML"
license = "MIT"
classifiers = [ "Intended Audience :: Science/Research", "Development Status :: 4 - Beta", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Scientific/Engineering :: Information Analysis",]
requires-python = ">=3.9, <3.12"
dependencies = [ "importlib-metadata; python_version<\"3.8\"", "pandas", "google-cloud-bigquery", "tqdm", "timeago", "prodict", "numpy", "packaging>22.0", "responses",]
dynamic = [ "version",]


[[project.authors]]
name = "Bell Eapen"
email = "github_public@gulfdoctor.net"


[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8; variant=GFM"

[project.urls]
Homepage = "https://nuchange.ca"
Source = "https://github.com/dermatologist/fhiry"

[project.optional-dependencies]
llm = [ "llama-index", "langchain==0.0.350", "overrides",]
testing = [ "setuptools", "pytest", "pytest-cov",]
dev = [
    "setuptools",
    "setuptools_scm",
    "pytest",
    "pytest-cov",
    "tox",
    "black",
    "recommonmark",
    "sphinx",
    "wheel",
    "twine",
    "build",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "any",]

[tool.flake8]
max_line_length = "88"
extend_ignore = "E203, W503"
exclude = "\n.tox\nbuild\ndist\n.eggs\ndocs/conf.py"

[tool.pyscaffold]
version = "4.5"
package = "fhiry"
extensions = "\nmarkdown"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "\n--verbose"
norecursedirs = [ "dist", "build", ".tox",]
testpaths = [ "tests",]


[tool.devpi.upload]
no_vcs = "1"
formats = "bdist_wheel"


[tool.setuptools.packages.find]
where = [ "src"]
exclude = [ "tests", "notes", "docs"]
namespaces = true
