[tool.poetry]
name = "fhiry"
version = "0.5.0"
description = "FHIR to pd.Dataframe"
authors = ["Bell Eapen <github@gulfdoctor.net>"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/dermatologist/fhiry"
homepage = "https://github.com/dermatologist/fhiry"

classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Healthcare Industry"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.1.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
